# CEIA-ViT

./: pyproject.toml
TrabajosPracticos/TP1/: TP1.ipynb
TrabajosPracticos/TP2/: TP2.ipynb
