[tool.poetry]
name = "ceia-vit"
version = "0.1.0"
description = "Project to solve the practice of the course VComputer Vision III"
authors = ["Alex Barria <alex@tryolabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.7.0"
torchvision = "^0.22.0"
matplotlib = "^3.10.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
